public/scss/modules/_photo.scss
/*
Photo

*/

@import '../_bootstrap-variables.scss';

.photo-grid:after {
  content: '';
  display: block;
  clear: both;
}

.gutter-sizer {
  width: 0.5%;
}
.grid-sizer, .photo-grid-item {
  width: 24.5%;
  margin-bottom: 0.5%;
}

.photo-grid-item-photo {
  background-color: #d40026;
}
.photo-grid-item {
  float: left;
}

.photo-grid-item-photo img {
  display: block;
  max-width: 100%;
}

.potw-thumb {
  width: 49%;
  margin-bottom: 1%;
}

/* Weekly photo ribbon */
.ribbon-container {
  position: absolute;
  top: 0px;
  left: 15px;
  width: 200px;
  height: 200px;
  overflow: hidden;
}

.corner-ribbon {
  width: 200px;
  position: absolute;
  top: 25px;
  left: -50px;
  text-align: center;
  line-height: 50px;
  letter-spacing: 1px;
  color: #f0f0f0;
  transform: rotate(-45deg);
  -webkit-transform: rotate(-45deg);
  background-color: #d40026;
}

.corner-ribbon.shadow {
  box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
}

